Entrega de tarea 2 CV html

--- a/M1U2/prueba.html
+++ b/M1U2/prueba.html
@@ -26,13 +26,18 @@
 </ol>
 <h3>Perfil</h3>
 <p>Mi nombre es Ariel Aschenmil, vivo en Villa Devoto CABA, y en esta ocasión vengo a presentarles mi CV.
-    Espero que les sea de agrado.</p>
+    Espero que les sea de agrado.
+</p>
     <hr>
     <p>Como verán, soy una persona que disfruta mucho el ver series o peliculas, más arriba les deje mis 3 peliculas favoritas en orden, y mis 3 series favoritas, aunque me gustan todas por igual, por ende la lista no esta en orden.
         Si le dan una oportunidad a alguna de todas estas obras, estoy seguro de que las disfrutaran tanto como yo.
-    </p>
+</p>
 <hr>
-<p>Por ultimo, queria agradecerles por el tiempo y el espacio, se que recibiran muchos CV's y sera una tarea larga corregirlos todos, les envio mis animos para lo que resta de la semana y un saludo muy grande.</p>
-<h4>Si desea ponerse en contacto conmigo, puede hacerlo completando el siguiente <a href="file:///C:/Users/Ariel/Desktop/Curso%20UTN%20Programador/formulario.html" target="_blank">formulario</a></h4>
+<p>Por ultimo, queria agradecerles por el tiempo y el espacio, se que recibiran muchos CV's y sera una tarea larga corregirlos todos, les envio mis animos para lo que resta de la semana y un saludo muy grande.
+</p>
+<h4>Si desea ponerse en contacto conmigo, puede hacerlo completando el siguiente 
+    <a href="file:///C:/Users/Ariel/Desktop/Curso%20UTN%20Programador/formulario.html" target="_blank">formulario
+    </a>
+</h4>
 </body>
 </html>
