Vinculado a estilosprueba.css

--- a/M1U2/prueba.html
+++ b/M1U2/prueba.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Ariel Aschenmil</title>
+    <link rel="stylesheet" href="estilosprueba.css">
 </head>
 <body>
     <h1>CV Ariel Aschenmil</h1>
@@ -36,7 +37,7 @@
 <p>Por ultimo, queria agradecerles por el tiempo y el espacio, se que recibiran muchos CV's y sera una tarea larga corregirlos todos, les envio mis animos para lo que resta de la semana y un saludo muy grande.
 </p>
 <h4>Si desea ponerse en contacto conmigo, puede hacerlo completando el siguiente 
-    <a href="formulario.html" target="_blank">formulario
+    <a href="formulario.html" target="_blank">formulario.
     </a>
 </h4>
 </body>
