--- a/M2U3/Maquetado1/index.html
+++ b/M2U3/Maquetado1/index.html
@@ -2,27 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maquetado1</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/estilos.css">
-    </head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maquetado1</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/estilos.css">
+</head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous">
-    </script>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <!--navbar-->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">MAQUETADO 1</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -43,21 +41,105 @@
       </div>
     </div>
   </nav>
-<footer>
-    <p class="text-center">Diseñado por: Ariel Aschenmil 2023</p>
-</footer>
-<div class="container-fluid">
+  <!--Cierra navbar-->
+  <div class="container-fluid">
     <div id="Home" class="row align-items-center hero">
-        <div class="col-lg-3 offset-lg-2">
-            <p>Bajada</p>
-            <h1>Melba Tattoo</h1>
-            <p>Bienvenidx a mi sitio web de contenido, espero les guste.</p>
-        </div>
+      <div class="col-lg-3 offset-lg-2">
+        <p>Bajada</p>
+        <h1>Melba Tattoo</h1>
+        <p>Bienvenidx a mi sitio web de contenido, espero les guste.</p>
+      </div>
     </div>
-</div>
-
-
-
-
+  </div>
+  <!--lista Novedades-->
+  <div class="row my-3">
+    <div id="novedades" class="col-md-3 offset-md-0 py-3">
+      <h2>Novedades</h2>
+      <ul class="lista-novedades">
+        <li><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="img/diseños1.jpg">Nuevos diseños
+            1</a></li>
+        <li><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="img/diseños1.jpg">Nuevos diseños
+            2</a></li>
+        <li><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="img/diseños1.jpg">Nuevos diseños
+            3</a></li>
+        <li><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="img/diseños1.jpg">Nuevos diseños
+            4</a></li>
+        <li><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="img/diseños1.jpg">Nuevos diseños
+            5</a></li>
+      </ul>
+    </div>
+  </div>
+  <!--Cierra Novedades-->
+  <!-- modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Nuevos diseños</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h1>Nuevos diseños tradi</h1>
+          <p>Planilla de nuevos diseños</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--Cierra modal-->
+  <!--testimonios-->
+  <div class="col-md-3 my-3">
+    <div class="rounded py-3 testimonios">
+      <h2 class="text-center">Testimonios</h2>
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="testimonio">
+                <h5>"Muy buena la atención y la higiene del estudio!!"</h5>
+                <p>Leila, Villa del Parque</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="testimonio">
+                <h5>"Hermosas las lineas y los diseños, recomiendadisima!"</h5>
+                <p>Seba, Villa Urquiza</p>
+              </div>
+              <div class="carousel-item">
+                <div class="testimonio">
+                  <h5>"Muy bien hecho el tatuaje!"</h5>
+                  <p>Chino, La Paternal</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <p class="text-center">Diseñado por: Ariel Aschenmil 2023</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+  </script>
 </body>
+
 </html>
