--- a/M2U3/Maquetado1/index.html
+++ b/M2U3/Maquetado1/index.html
@@ -26,16 +26,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Novedades</a>
+            <a class="nav-link" href="#novedades">Novedades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sobre mi</a>
+            <a class="nav-link" href="#nosotros">Historia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Contacto</a>
+            <a class="nav-link" href="#nosotros">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contactanos">Contactanos</a>
           </li>
         </ul>
       </div>
@@ -43,7 +46,7 @@
   </nav>
   <!--Cierra navbar-->
   <div class="container-fluid">
-    <div id="Home" class="row align-items-center hero">
+    <div id="Home" class="row align-items-center hero scroll_section">
       <div class="col-lg-3 offset-lg-2">
         <p>Bajada</p>
         <h1>Melba Tattoo</h1>
@@ -53,7 +56,7 @@
   </div>
   <!--lista Novedades-->
   <div class="row my-3">
-    <div id="novedades" class="col-md-3 offset-md-0 py-3">
+    <div id="novedades" class="col-md-3 offset-md-0 py-3 scroll_section">
       <h2>Novedades</h2>
       <ul class="lista-novedades">
         <li><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal"><img src="img/diseños1.jpg">Nuevos diseños
@@ -89,7 +92,7 @@
     <div class="col-md-3 my-3">
       <div class="rounded py-3 testimonios">
         <h2 class="text-center">Testimonios</h2>
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div id="carouselExampleIndicators" class="carousel slide scroll_section" data-bs-ride="true">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -98,7 +101,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
               aria-label="Slide 3"></button>
           </div>
-          <div id="carouselExample" class="carousel slide">
+          <div id="carouselExample" class="carousel slide scroll_section">
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="testimonio">
@@ -133,12 +136,104 @@
         </div>
       </div>
     </div>
-    <footer>
-      <p class="text-center">Diseñado por: Ariel Aschenmil 2023</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-      </script>
+    <!--cierra testimonios-->
+    <!--historia-->
+    <div id="historia" class="row align-items-center py-4 scroll_section">
+      <div class="col-lg-2 col-md-3 offset-lg-2 d-none d-sm-block">
+        <img src="img/maggie.jpg" alt="historia 1" class="img-fluid">
+      </div>
+      <div class="col-lg-2 col-md-3 d-none d-sm-block">
+        <img src="img/clown.jpg" alt="historia 2" class="img-fluid">
+      </div>
+      <div class="col-12 d-sm-none">
+        <img src="img/castle.jpg" alt="historia 3" class="img-fluid">
+      </div>
+      <div class="col-lg-4 col-md-6 mt-4 mt-sm-0">
+        <h2>Historia</h2>
+        <p>
+          Soy tatuadora hace 5 años, comence por diversion e interes en el arte y el dibujo que siempre tuve.
+          Luego de eso se convirtio en mi profesión y mi oficio.
+        </p>
+      </div>
+    </div>
+    <!--cierra historia-->
+    <!--nosotros-->
+    <div id="nosotros" class="row align-items-stretch my-3 staff py-4 scroll_section">
+      <div class="col-lg-8 offset-lg-2">
+        <h2>Nosotros</h2>
+        <div class="row row-cols-1 row-cols-md-4 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="img/castle.jpg" class="card-img-top" alt="Castillo">
+              <div class="card-body">
+                <h5 class="card-title">Castillo</h5>
+                <p class="card-text">Este es un castillo que nos representa.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="img/yo.jpeg" class="card-img-top" alt="Ariel">
+              <div class="card-body">
+                <h5 class="card-title">Ariel</h5>
+                <p class="card-text">Este soy yo, Ariel, creador del sitio web y fiel cliente de Melba Tattoo.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--cierra nosotros-->
+    <!--visitanos + contactanos-->
+    <div id="conocenos" class="row py-4 scroll_section">
+      <div class="row-cols-md-4 offset-md-2">
+        <h2>Visitanos</h2>
+        <div class="mapa">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.224948610566!2d-58.4762858235815!3d-34.57317425588692!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb72050387b59%3A0xcb65fe0ee6c1f5b5!2sLINNEA%20ESTUDIO!5e0!3m2!1sen!2sar!4v1687536894577!5m2!1sen!2sar"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <!--fin visitanos-->
+
+        <div class="col-md-4 mt-4 mt-sm-0">
+          <h2>Contactanos</h2>
+          <form class="row g-3">
+            <div class="col-md-6">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nombre">
+            </div>
+            <div class="col-md-6">
+              <label for="apellido" class="form-label">Apellido</label>
+              <input type="text" class="form-control" id="apellido">
+            </div>
+            <div class="col-12">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="Email" placeholder="ejemplo@email.com">
+            </div>
+            <div class="col-12">
+              <label for="tel" class="form-label">Tel</label>
+              <input type="text" class="form-control" id="tel">
+            </div>
+            <div class="col-12">
+              <label for="mensaje" class="form-label">Mensaje</label>
+              <textarea class="form-control" id="mensaje" rows="3">
+              </textarea>
+            </div>
+            <div class="col-12">
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div><!--fin contactamos-->
+
+      <footer>
+        <p class="text-center">Diseñado por: Ariel Aschenmil 2023</p>
+      </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
